@@ -18,33 +18,63 @@ END_TEST
 
 START_TEST(test_pass)
 {
-  fail_unless (1==1, "This test should pass");
-  fail_unless (9999, "This test should pass");
+  fail_unless(1 == 1, "This test should pass");
+  fail_unless(9999, "This test should pass");
 }
 END_TEST
 
 START_TEST(test_fail)
 {
-  fail_unless (1==2, "This test should fail");
-}
-END_TEST
-
-START_TEST(test_fail_null_msg)
-{
-  fail_unless (2==3, NULL);
+  fail_unless(1 == 2, "This test should fail");
 }
 END_TEST
 
 START_TEST(test_fail_if_pass)
 {
-  fail_if(1==2, "This test should pass");
+  fail_if(1 == 2, "This test should pass");
   fail_if(0, "This test should pass");
 }
 END_TEST
 
 START_TEST(test_fail_if_fail)
 {
-  fail_if(1==1, "This test should fail");
+  fail_if(1 == 1, "This test should fail");
+}
+END_TEST
+
+START_TEST(test_fail_null_msg)
+{
+  fail_unless(2 == 3, NULL);
+}
+END_TEST
+
+START_TEST(test_fail_if_null_msg)
+{
+  fail_if(2 != 3, NULL);
+}
+END_TEST
+
+START_TEST(test_fail_vararg_msg_1)
+{
+  int x = 3;
+  int y = 4;
+  fail_unless(x == y, "%d != %d", x, y);
+}
+END_TEST
+
+START_TEST(test_fail_vararg_msg_2)
+{
+  int x = 5;
+  int y = 6;
+  fail_if(x != y, "%d != %d", x, y);
+}
+END_TEST
+
+START_TEST(test_fail_vararg_msg_3)
+{
+  int x = 7;
+  int y = 7;
+  fail("%d == %d", x, y);
 }
 END_TEST
 
@@ -140,6 +170,10 @@ Suite *make_sub_suite(void)
   tcase_add_test (tc_simple, test_fail_if_pass);
   tcase_add_test (tc_simple, test_fail_if_fail);
   tcase_add_test (tc_simple, test_fail_null_msg);
+  tcase_add_test (tc_simple, test_fail_if_null_msg);
+  tcase_add_test (tc_simple, test_fail_vararg_msg_1);
+  tcase_add_test (tc_simple, test_fail_vararg_msg_2);
+  tcase_add_test (tc_simple, test_fail_vararg_msg_3);
   tcase_add_test (tc_signal, test_segv);
   tcase_add_test (tc_signal, test_fpe);
   tcase_add_test (tc_signal, test_mark_point);
